--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>年化收益计算器</title>
+    <link href="./css/bootstrap/bootstrap.min.css" />
 </head>
 
 <body>
@@ -44,6 +47,8 @@
     </div>
 </body>
 
+<script src="./js/jquery/jquery-3.3.1.min.js"></script>
+<script src="./js/bootstrap/bootstrap.min.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
