--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>年化收益计算器</title>
-    <link href="./css/bootstrap/bootstrap.min.css" />
+    <link href="./css/bootstrap/bootstrap.min.css" rel="stylesheet" />
 </head>
 
 <body>
