修复显示错误

--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -94,7 +94,7 @@
                 <input type="text" class="form-control" id="loss" readonly="readonly" />
             </div>
             <div class="input-group-append">
-                <span class="input-group-text">%</span>
+                <span class="input-group-text">元</span>
             </div>
         </div>
 
