--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <h3>输入</h3>
         <div class="form-inline form-group">
-            <label class="col-form-label col-sm-3 d-inline-block text-right" for="principal">本金</label>
+            <label class="col-form-label col-2 d-inline-block text-right" for="principal">本金</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="principal" oninput="checkMoney(this)" />
             </div>
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="form-inline form-group">
-            <label class="col-form-label col-sm-3 d-inline-block text-right" for="days">投资时长</label>
+            <label class="col-form-label col-2 d-inline-block text-right" for="days">投资时长</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="days" oninput="checkDay(this)" />
             </div>
@@ -48,7 +48,16 @@
             </div>
         </div>
         <div class="form-inline form-group">
-            <label class="col-form-label col-sm-3 d-inline-block text-right" for="rate">年化收益率</label>
+            <label class="col-form-label col-2 d-inline-block text-right" for="waste_days">浪费时间</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="waste_days" oninput="checkMoney(this)" />
+            </div>
+            <div class="input-group-append">
+                <span class="input-group-text">天</span>
+            </div>
+        </div>
+        <div class="form-inline form-group">
+            <label class="col-form-label col-2 d-inline-block text-right" for="rate">年化收益率</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="rate" oninput="checkMoney(this)" />
             </div>
@@ -57,7 +66,7 @@
             </div>
         </div>
         <div class="form-inline form-group">
-            <label class="col-form-label col-sm-3 d-inline-block text-right" for="income">实际收益</label>
+            <label class="col-form-label col-2 d-inline-block text-right" for="income">实际收益</label>
             <div class="input-group">
                 <input type="text" class="form-control" id="income" oninput="checkMoney(this)" />
             </div>
@@ -68,30 +77,51 @@
 
         <h3>计算</h3>
         <div class="form-inline form-group">
-            <button type="button" class="col-sm-3 btn btn-primary" onclick="calculateAll()">计算所有</button>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateAll()">计算所有</button>
         </div>
         <div class="form-inline form-group">
-            <button type="button" class="col-sm-3 btn btn-primary" onclick="calculateInterest()">计算预期收益</button>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateInterest()">计算预期收益</button>
             <div class="input-group">
                 <input type="text" class="form-control" id="interest" readonly="readonly" />
             </div>
             <div class="input-group-append">
                 <span class="input-group-text">元</span>
             </div>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateInterestWaste()">包括浪费时间</button>
+            <div class="input-group">
+                <input type="text" class="form-control" id="interest_waste" readonly="readonly" />
+            </div>
+            <div class="input-group-append">
+                <span class="input-group-text">元</span>
+            </div>
         </div>
         <div class="form-inline form-group">
-            <button type="button" class="col-sm-3 btn btn-primary" onclick="calculateRateActual()">计算实际年化收益率</button>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateRateActual()">计算实际年化收益率</button>
             <div class="input-group">
                 <input type="text" class="form-control" id="rate_actual" readonly="readonly" />
             </div>
             <div class="input-group-append">
                 <span class="input-group-text">%</span>
             </div>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateRateActualWaste()">包括浪费时间</button>
+            <div class="input-group">
+                <input type="text" class="form-control" id="rate_actual_waste" readonly="readonly" />
+            </div>
+            <div class="input-group-append">
+                <span class="input-group-text">%</span>
+            </div>
         </div>
         <div class="form-inline form-group">
-            <button type="button" class="col-sm-3 btn btn-primary" onclick="calculateLoss()">计算损失金额</button>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateLoss()">计算损失金额</button>
             <div class="input-group">
                 <input type="text" class="form-control" id="loss" readonly="readonly" />
+            </div>
+            <div class="input-group-append">
+                <span class="input-group-text">元</span>
+            </div>
+            <button type="button" class="col-2 btn btn-primary" onclick="calculateLossWaste()">包括浪费时间</button>
+            <div class="input-group">
+                <input type="text" class="form-control" id="loss_waste" readonly="readonly" />
             </div>
             <div class="input-group-append">
                 <span class="input-group-text">元</span>
@@ -102,8 +132,11 @@
         <div>
             <ul class="list-group">
                 <li class="list-group-item">预期收益 = 本金 × 年化收益率 × 投资天数 ÷ 365</li>
+                <li class="list-group-item">预期收益（包括浪费时间） = 本金 × 年化收益率 × (投资天数 + 浪费天数) ÷ 365</li>
                 <li class="list-group-item">实际年化收益率 = 实际收益 ÷ 本金 ÷ 投资天数 × 365 × 100%</li>
+                <li class="list-group-item">实际年化收益率（包括浪费时间） = 实际收益 ÷ 本金 ÷ (投资天数 + 浪费天数) × 365 × 100%</li>
                 <li class="list-group-item">损耗金额 = 预期收益 - 实际收益</li>
+                <li class="list-group-item">损耗金额（包括浪费时间） = 预期收益（包括浪费时间） - 实际收益</li>
             </ul>
         </div>
     </div>
