调整文件路径

--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>financing</title>
-    <link href="./css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="./css/lib/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/index.css" rel="stylesheet" />
 </head>
 
@@ -148,8 +148,8 @@
     </footer>
 </body>
 
-<script src="./js/jquery/jquery-3.3.1.min.js"></script>
-<script src="./js/bootstrap/bootstrap.min.js"></script>
+<script src="./js/lib/jquery-3.3.1.min.js"></script>
+<script src="./js/lib/bootstrap.min.js"></script>
 <script src="./js/index.js"></script>
 
 </html>
