--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -1,148 +1,44 @@
 <!doctype html>
-<html>
+<html class="h-100">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>financing</title>
+    <title>index</title>
     <link href="./css/lib/bootstrap.min.css" rel="stylesheet" />
-    <link href="./css/index.css" rel="stylesheet" />
+    <link href="./css/commons.css" rel="stylesheet" />
 </head>
 
-<body>
-    <nav class="navbar navbar-expand navbar-light">
-        <a class="navbar-brand" href="https://github.com/gaojr/financing" aria-label="GitHub">
-            <svg height="32" class="octicon octicon-mark-github" viewBox="0 0 16 16" version="1.1" width="32"
-                aria-hidden="true">
-                <path fill-rule="evenodd"
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
-        </a>
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">年化收益</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">工资税收</a>
-            </li>
-        </ul>
-    </nav>
-    <div class="container">
-        <h3>输入</h3>
-        <div class="form-inline form-group">
-            <label class="col-form-label col-2 d-inline-block text-right" for="principal">本金</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="principal" oninput="checkMoney(this)" />
+<body class="d-flex flex-column h-100">
+    <header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="https://github.com/gaojr/financing" aria-label="GitHub">
+                <svg height="32" class="octicon octicon-mark-github" viewbox="0 0 16 16" version="1.1" width="32"
+                        aria-hidden="true">
+                    <path fill-rule="evenodd"
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+                    </path>
+                </svg>
+            </a>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./managing.html" target="iframe">年化收益</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./tax.html" target="iframe">工资税收</a>
+                    </li>
+                </ul>
             </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <label class="col-form-label col-2 d-inline-block text-right" for="days">投资时长</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="days" oninput="checkDay(this)" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">天</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <label class="col-form-label col-2 d-inline-block text-right" for="waste_days">浪费时间</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="waste_days" oninput="checkMoney(this)" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">天</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <label class="col-form-label col-2 d-inline-block text-right" for="rate">年化收益率</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="rate" oninput="checkMoney(this)" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">%</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <label class="col-form-label col-2 d-inline-block text-right" for="income">实际收益</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="income" oninput="checkMoney(this)" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-        </div>
+        </nav>
+    </header>
 
-        <h3>计算</h3>
-        <div class="form-inline form-group">
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateAll()">计算所有</button>
-        </div>
-        <div class="form-inline form-group">
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateInterest()">计算预期收益</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="interest" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateInterestWaste()">包括浪费时间</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="interest_waste" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateRateActual()">计算实际年化收益率</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="rate_actual" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">%</span>
-            </div>
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateRateActualWaste()">包括浪费时间</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="rate_actual_waste" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">%</span>
-            </div>
-        </div>
-        <div class="form-inline form-group">
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateLoss()">计算损失金额</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="loss" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-            <button type="button" class="col-2 btn btn-primary" onclick="calculateLossWaste()">包括浪费时间</button>
-            <div class="input-group">
-                <input type="text" class="form-control" id="loss_waste" readonly="readonly" />
-            </div>
-            <div class="input-group-append d-inline-block w-45px">
-                <span class="input-group-text">元</span>
-            </div>
-        </div>
+    <main role="main" class="main flex-shrink-0">
+        <iframe src="./managing.html" frameborder="0" name="iframe" class="w-100 h-100"></iframe>
+    </main>
 
-        <h3>公式</h3>
-        <div>
-            <ul class="list-group">
-                <li class="list-group-item">预期收益 = 本金 × 年化收益率 × 投资天数 ÷ 365</li>
-                <li class="list-group-item">预期收益（包括浪费时间） = 本金 × 年化收益率 × (投资天数 + 浪费天数) ÷ 365</li>
-                <li class="list-group-item">实际年化收益率 = 实际收益 ÷ 本金 ÷ 投资天数 × 365 × 100%</li>
-                <li class="list-group-item">实际年化收益率（包括浪费时间） = 实际收益 ÷ 本金 ÷ (投资天数 + 浪费天数) × 365 × 100%</li>
-                <li class="list-group-item">损耗金额 = 预期收益 - 实际收益</li>
-                <li class="list-group-item">损耗金额（包括浪费时间） = 预期收益（包括浪费时间） - 实际收益</li>
-            </ul>
-        </div>
-    </div>
-    <footer class="container footer mt-4 py-3">
-        <div class="text-right">
+    <footer class="footer mt-auto py-3">
+        <div class="container text-right">
             <span class="text-muted">©2019</span>
         </div>
     </footer>
