--- a/gfinacing/tax.html
+++ b/gfinacing/tax.html
@@ -11,6 +11,153 @@
 
 <body>
     <div class="container py-2">
+        <h3>输入</h3>
+        <div class="form-inline form-group">
+            <label class="col-form-label col-2 d-inline-block text-right" for="salary">工资</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="salary" oninput="checkMoney(this)" value="10000" />
+            </div>
+            <div class="input-group-append d-inline-block w-45px">
+                <span class="input-group-text">元</span>
+            </div>
+        </div>
+        <div class="form-inline form-group">
+            <label class="col-form-label col-2 d-inline-block text-right" for="base">基数</label>
+            <div class="input-group">
+                <input type="text" class="form-control" id="base" oninput="checkMoney(this)" value="6000" />
+            </div>
+            <div class="input-group-append d-inline-block w-45px">
+                <span class="input-group-text">元</span>
+            </div>
+        </div>
+
+        <h3>计算</h3>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right"></div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <button type="button" class="col-2 btn btn-primary" onclick="tax()">税后</button>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="afterTax" readonly="readonly" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <button type="button" class="col-2 btn btn-primary" onclick="afterTax()">交税</button>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="tax" readonly="readonly" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right"></div>
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="calculateAllPer()">计算所有</button>
+            </div>
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="calculateAllRmb()">计算所有</button>
+            </div>
+        </div>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right">养老保险金</div>
+            <div class="col">
+                <div class="w-75 form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="pensionPer" oninput="checkMoney(this)" value="8" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="pensionRmb" oninput="checkMoney(this)" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right">医疗保险金</div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="medicalPer" oninput="checkMoney(this)" value="2" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="medicalRmb" oninput="checkMoney(this)" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right">失业保险金</div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="unemploymentPer" oninput="checkMoney(this)" value="0.1" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="unemploymentRmb" oninput="checkMoney(this)" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mw-100">
+            <div class="col-form-label col-2 d-inline-block text-right">住房公积金</div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="housingPer" oninput="checkMoney(this)" value="5" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-inline form-group">
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="housingRmb" oninput="checkMoney(this)" />
+                    </div>
+                    <div class="input-group-append d-inline-block w-45px">
+                        <span class="input-group-text">元</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
