添加页面&方法

--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -25,6 +25,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="./managing.html" target="iframe">年化收益</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./deposite.html" target="iframe">整存整取</a>
+                    </li>
                 </ul>
             </div>
         </nav>
