增加”财富自由“部分

--- a/gfinacing/index.html
+++ b/gfinacing/index.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./deposite.html" target="iframe">整存整取</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./freedom.html" target="iframe">财富自由</a>
+                    </li>
                 </ul>
             </div>
         </nav>
